# libemuls

./: .gitignore  Cargo.toml  README.md
chip8-gui/: Cargo.toml
chip8-gui/src/: main.rs
chip8-sdl/: Cargo.toml
chip8-sdl/src/: main.rs
component-chip_8/: Cargo.toml
component-chip_8/src/: lib.rs
component_sharp_lr35902/: Cargo.toml
component_sharp_lr35902/extra/: generate_instruction_templates  generate_instructions_data  generate_sharp_lr35902_instruction_templates  generate_sharp_lr35902_instructions_data  opcodes.json
component_sharp_lr35902/extra/data/: instructions.json  opcodes.json
component_sharp_lr35902/extra/docs/: instructions.md  (+1 more)
component_sharp_lr35902/src/: cpu.rs  cpu_test.rs  lib.rs  utils.rs
emu-chip_8-sdl/: Cargo.toml
emu-chip_8-sdl/src/: main.rs
extra/project/: vsc_template.launch.json
extra/sharp_lr35902/: generate_sharp_lr35902_instruction_templates  generate_sharp_lr35902_instruction_templates.md
frontend-interfaces/: Cargo.toml
frontend-sdl/: Cargo.toml
frontend-sdl/src/: audio_device_sdl.rs  frontend_sdl.rs  lib.rs
interfaces/: Cargo.toml
interfaces-frontend/: Cargo.toml
interfaces-frontend/src/: io_frontend.rs  lib.rs
interfaces/src/: audio_device.rs  event_code.rs  io_frontend.rs  keycode.rs  lib.rs  logger.rs  null_logger.rs  stdout_logger.rs
io-frontend/: Cargo.toml
io-frontend/src/: lib.rs
libchip8/: Cargo.toml
libchip8/src/: lib.rs
playground/: Cargo.toml
playground/src/: main.rs
system-chip_8/: Cargo.toml
system-chip_8/extra/: ROMS_SOURCE
system-chip_8/src/: chip_8.rs  lib.rs
(+36 files in other folders)
