[package]
authors = ["Saverio Miroddi <saverio.pub2@gmail.com>"]
edition = "2018"
name = "emu-chip_8-sdl"
version = "0.1.0"

[dependencies]

clap = "2.33.1"
frontend-sdl = {path = "../frontend-sdl"}
interfaces-frontend = {path = "../interfaces-frontend"}
maplit = "1.0.2"
system-chip_8 = {path = "../system-chip_8"}
